--- a/src/components/style.css
+++ b/src/components/style.css
@@ -79,3 +79,69 @@
     padding: auto;
     padding-top: 65px;
 }
+.m2 {
+    width: 300px;
+}
+.m3 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.simage {
+    height: 120px;
+    margin-bottom: 10px;
+}
+.cau {
+    border: solid;
+    border-color: #a2b3eb;
+    border-radius: 25px;
+    width: 300px;
+    box-shadow: 0 4px 6px rgba(193, 174, 236, 0.1);
+}
+.car {
+    border-radius: 50px;
+}
+.car {
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
+    background-color: #f8f9fa; /* Light gray background */
+}
+
+.car:hover {
+    transform: translateY(-5px);
+}
+
+.card-title {
+    font-size: 1.8rem;
+    font-weight: bold;
+    color: #333;
+    margin-bottom: 10px;
+}
+
+.card-text {
+    /* font-size: 1.2rem; */
+    color: #555;
+    line-height: 1.6;
+}
+
+.card-body {
+    padding: 20px;
+}
+
+@media (max-width: 768px) {
+    .car {
+        margin-bottom: 20px;
+    }
+}
+
+@media (max-width: 576px) {
+    .card-title {
+        font-size: 1.5rem;
+    }
+
+    .card-text {
+        font-size: 1rem;
+    }
+}
